# rmcs_flight

./: .gitignore  .gitmodules  Dockerfile  README.md
.devcontainer/: devcontainer.json
rmcs_flight/linux/: CMakeLists.txt
rmcs_flight/linux/common/: dji_linux_helpers.hpp
rmcs_flight/linux/flight-control/: flight_control_sample.cpp  flight_control_sample.hpp  main.cpp
rmcs_flight/src/bringup/: CMakeLists.txt  package.xml
rmcs_flight/src/bringup/config/: Dji_config.txt  flight_controller.yaml
rmcs_flight/src/bringup/launch/: launch.py
rmcs_flight/src/flight_controller/: CMakeLists.txt  package.xml
rmcs_flight/src/flight_controller/src/: main.cpp  rmcs_flight_controller.hpp
rmcs_flight/src/flight_controller/src/controller_functions/: data_process.cpp  initialize.cpp  main_process.cpp  rmcs_flight_controller.cpp  util_function.cpp
rmcs_flight/src/flight_controller/src/double_loop_pid/: pid_controller.hpp  pid_parameters.hpp
rmcs_flight/src/flight_controller/src/functions/: data_process.cpp  initialize.cpp  main_process.cpp  rmcs_flight_controller.cpp  util_function.cpp
rmcs_flight/src/rmcs_flight_bringup/: package.xml
rmcs_flight/src/rmcs_flight_bringup/config/: flight_controller.yaml
rmcs_flight_ws/src/flight_controller/: CMakeLists.txt
rmcs_flight_ws/src/flight_controller/src/: main.cpp  pose_subscription.hpp  rmcs_flight_controller.hpp
rmcs_flight_ws/src/flight_controller/src/common/: UserConfig.txt  dji_flight_control.cpp  dji_linux_helpers.cpp  dji_linux_helpers.hpp
rmcs_flight_ws/src/flight_controller/src/functions/: initialize.cpp  main_process.cpp  rmcs_flight_controller.cpp  util_function.cpp
rmcs_flight_ws/src/rmcs_flight_bringup/: CMakeLists.txt
rmcs_flight_ws/src/rmcs_flight_bringup/config/: flight_controller.yaml
rmcs_flight_ws/src/rmcs_flight_bringup/launch/: launch.py
